Add pdf, fix filename

--- a/Topics/11_Development_Practices/11_Development_Practices.tex
+++ b/Topics/11_Development_Practices/11_Development_Practices.tex
@@ -160,7 +160,7 @@ Third party libraries require \emc{additional installation}. \emc{Useful ones}:
 Issues to consider before relying on a 3rd party library:
 \begin{itemize}
 \item \emc{Quality}: is it going to be any good? Good Documentation; No Bugs.
-\item \emc{Community}: is it being used by many? is it being maintained? Release schedule, responsivness to bug reports, and breaking downstreams.
+\item \emc{Community}: is it being used by many? is it being maintained? Release schedule, responsiveness to bug reports, and breaking downstreams.
 \item \emc{Trust}: do you believe maintainers will attack your software?
 \item \emc{License}? are you allowed to use it?
 \end{itemize}
@@ -330,7 +330,7 @@ LICENSE                   # License
 setup.py                  # Packaging & dependencies information
 tox.ini                   # Test setup
 euclid/__init__.py        # Modules code
-euclid>/gcd.py
+euclid/gcd.py
 docs/conf.py              # Module Sphinx documentation
 docs/index.rst
 tests/test_gcd.py         # Module tests
